[package]
name = "near-price-tracking-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.31"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }

log = "0.4"
pretty_env_logger = "0.5"
teloxide = { version = "0.12", features = ["macros"] }

[[bin]]
name = "near-price-tracking-bot"
path = "src/main.rs"
